# CppSDK

./: CMakeLists.txt  README.md  build.sh  loadDependency.bat  loadDependency.sh
client/: dg_client.cpp  dg_client.h  dg_client_asio.cpp  dg_client_asio.h  dg_client_http.cpp  dg_client_http.h  dg_model_api.cpp
doc/html/: annotated.html  classDG_1_1AIModel-members.html  classDG_1_1AIModel.html  classDG_1_1AIModelAsync-members.html  classDG_1_1AIModelAsync.html  classDG_1_1BasicTensor-members.html  classDG_1_1BasicTensor.html  classDG_1_1JsonHelper-members.html  classDG_1_1JsonHelper.html  classDG_1_1ModelParams-members.html  classDG_1_1ModelParams.html  classDG_1_1ModelParamsReadAccess-members.html  classDG_1_1ModelParamsReadAccess.html  classDG_1_1ModelParamsWriteAccess-members.html  classDG_1_1ModelParamsWriteAccess.html  dg__client__structs_8h.html  dg__client__structs_8h__dep__incl.map  dg__client__structs_8h__incl.map  dg__client__structs_8h__incl.md5  dg__client__structs_8h_source.html  dg__json__helpers_8h.html  dg__json__helpers_8h__dep__incl.map  dg__json__helpers_8h__dep__incl.md5  dg__json__helpers_8h__incl.map  dg__json__helpers_8h__incl.md5  dg__json__helpers_8h_source.html  dg__model__api_8h.html  dg__model__api_8h__incl.map  dg__model__api_8h__incl.md5  dg__model__api_8h_source.html  dg__model__parameters_8h.html  dg__model__parameters_8h__dep__incl.map  dg__model__parameters_8h__incl.map  dg__model__parameters_8h__incl.md5  dg__model__parameters_8h_source.html  dg__tensor__structs_8h.html  dg__tensor__structs_8h__dep__incl.map  dg__tensor__structs_8h__incl.map  dg__tensor__structs_8h__incl.md5  dg__tensor__structs_8h_source.html  (+28 more)
doc/html/html/: annotated.html  classDG_1_1AIModel-members.html  classDG_1_1AIModel.html  classDG_1_1AIModelAsync.html  classDG_1_1BasicTensor-members.html  classDG_1_1BasicTensor.html  classDG_1_1JsonHelper-members.html  classDG_1_1JsonHelper.html  classDG_1_1ModelParams-members.html  classDG_1_1ModelParamsReadAccess-members.html  classDG_1_1ModelParamsReadAccess.html  classDG_1_1ModelParamsReadAccess__inherit__graph.map  classDG_1_1ModelParamsReadAccess__inherit__graph.md5  classDG_1_1ModelParamsWriteAccess-members.html  classDG_1_1ModelParamsWriteAccess.html  classDG_1_1ModelParamsWriteAccess__coll__graph.map  classDG_1_1ModelParamsWriteAccess__coll__graph.md5  classDG_1_1ModelParamsWriteAccess__inherit__graph.map  classDG_1_1ModelParamsWriteAccess__inherit__graph.md5  classDG_1_1ModelParams__coll__graph.map  classDG_1_1ModelParams__inherit__graph.md5  classes.html  dg__client__structs_8h.html  dg__client__structs_8h__dep__incl.md5  dg__client__structs_8h__incl.map  dg__client__structs_8h__incl.md5  dg__client__structs_8h_source.html  dg__json__helpers_8h.html  dg__json__helpers_8h__dep__incl.map  dg__json__helpers_8h__dep__incl.md5  dg__json__helpers_8h__incl.map  dg__model__api_8h.html  dg__model__api_8h__incl.map  dg__model__api_8h__incl.md5  dg__model__api_8h_source.html  dg__model__parameters_8h.html  dg__model__parameters_8h__dep__incl.map  dg__model__parameters_8h__dep__incl.md5  dg__model__parameters_8h__incl.map  dg__model__parameters_8h__incl.md5  (+59 more)
examples/cpp/: CMakeLists.txt  dg_core_client.cpp  dg_core_client_async.cpp
inc/DglibInterface/: dg_model_api.h
inc/Utilities/: DGErrorHandling.h  DGLog.h  DGTrace.h  DGType.h  dg_client_structs.h  dg_com_decl.h  dg_device_types.h  dg_file_utilities.h  dg_json_helpers.h  dg_math_utilities.h  dg_model_parameters.h  dg_model_parameters.inc  dg_model_parameters_client.inc  dg_socket.h  dg_string_utilities.h  dg_tensor_structs.h  dg_time_utilities.h  dg_tracing_facility.h  dg_utility_singletons.cpp  dg_version.h  easywsclient.cpp  easywsclient.hpp  json.hpp  nameof.hpp
(+167 files in other folders)
